--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -289,7 +289,7 @@ For the questionnaire part, we are most interested in the self-rated distance be
 \caption{\label{fig:plot-all-effect}Effect size (Cohen's \emph{d}) of Valence.}
 \end{figure}
 
-In this part, we synthesized results from experiment 1a, 1b, 1c, 2, 5 and 6a. Data from 192 participants were included in these analyses. We found differences between positive and negative conditions on RT was Cohen's \emph{d} = -0.58 \(\pm\) 0.06, 95\% CI {[}-0.70 -0.47{]}; on \emph{d'} was Cohen's \emph{d} = 0.24 \(\pm\) 0.05, 95\% CI {[}0.15 0.34{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.44 \(\pm\) 0.10, 95\% CI {[}-0.63 -0.25{]}; \emph{d'}: Cohen's \emph{d} = 0.31 \(\pm\) 0.07, 95\% CI {[}0.16 0.45{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.15 \(\pm\) 0.07, 95\% CI {[}-0.30 0.00{]}; \emph{d'}: Cohen's \emph{d} = -0.07 \(\pm\) 0.07, 95\% CI {[}-0.21 0.08{]}. See Figure \ref{fig:plot-all-effect} left panel.
+In this part, we synthesized results from experiment 1a, 1b, 1c, 2, 5 and 6a. Data from 192 participants were included in these analyses. We found differences between positive and negative conditions on RT was Cohen's \emph{d} = -0.58 \(\pm\) 0.06, 95\% CI {[}-0.70 -0.47{]}; on \emph{d'} was Cohen's \emph{d} = 0.24 \(\pm\) 0.05, 95\% CI {[}0.15 0.34{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.44 \(\pm\) 0.10, 95\% CI {[}-0.63 -0.25{]}; \emph{d'}: Cohen's \emph{d} = 0.31 \(\pm\) 0.07, 95\% CI {[}0.16 0.45{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = 0.15 \(\pm\) 0.07, 95\% CI {[}0.00 0.30{]}; \emph{d'}: Cohen's \emph{d} = 0.07 \(\pm\) 0.07, 95\% CI {[}-0.08 0.21{]}. See Figure \ref{fig:plot-all-effect} left panel.
 
 \hypertarget{interaction-between-valence-and-self-reference}{%
 \subsection{Interaction between valence and self-reference}\label{interaction-between-valence-and-self-reference}}
@@ -298,9 +298,9 @@ In this part, we combined the experiments that explicitly manipulated the self-r
 
 In most of these experiments, the interaction between self-reference and valence was significant (see results of each experiment in supplementary materials). In the mini-meta-analysis, we analyzed the valence effect for self-referential condition and other-referential condition separately.
 
-For the self-referential condition, we found the same pattern as in the first part of results. That is we found significant differences between positive and neutral as well as positive and negative, but not neutral and negative. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.89 \(\pm\) 0.12, 95\% CI {[}-1.11 -0.66{]}; on \emph{d'} was Cohen's \emph{d} = 0.61 \(\pm\) 0.09, 95\% CI {[}0.44 0.78{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.76 \(\pm\) 0.13, 95\% CI {[}-1.01 -0.50{]}; \emph{d'}: Cohen's \emph{d} = 0.69 \(\pm\) 0.14, 95\% CI {[}0.42 0.96{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.03 \(\pm\) 0.13, 95\% CI {[}-0.29 0.22{]}; \emph{d'}: Cohen's \emph{d} = -0.08 \(\pm\) 0.08, 95\% CI {[}-0.24 0.07{]}. See Figure \ref{fig:plot-all-effect} the middle panel.
+For the self-referential condition, we found the same pattern as in the first part of results. That is we found significant differences between positive and neutral as well as positive and negative, but not neutral and negative. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.89 \(\pm\) 0.12, 95\% CI {[}-1.11 -0.66{]}; on \emph{d'} was Cohen's \emph{d} = 0.61 \(\pm\) 0.09, 95\% CI {[}0.44 0.78{]}. The effect was also observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.76 \(\pm\) 0.13, 95\% CI {[}-1.01 -0.50{]}; \emph{d'}: Cohen's \emph{d} = 0.69 \(\pm\) 0.14, 95\% CI {[}0.42 0.96{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = 0.03 \(\pm\) 0.13, 95\% CI {[}-0.22 0.29{]}; \emph{d'}: Cohen's \emph{d} = 0.08 \(\pm\) 0.08, 95\% CI {[}-0.07 0.24{]}. See Figure \ref{fig:plot-all-effect} the middle panel.
 
-For the other-referential condition, we found that only the difference between positive and negative on RT was significant, all the other conditions were not. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.28 \(\pm\) 0.05, 95\% CI {[}-0.38 -0.17{]}; on \emph{d'} was Cohen's \emph{d} = -0.02 \(\pm\) 0.08, 95\% CI {[}-0.17 0.13{]}. The effect was not observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.12 \(\pm\) 0.10, 95\% CI {[}-0.31 0.06{]}; \emph{d'}: Cohen's \emph{d} = 0.01 \(\pm\) 0.08, 95\% CI {[}-0.16 0.17{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = -0.14 \(\pm\) 0.09, 95\% CI {[}-0.31 0.03{]}; \emph{d'}: Cohen's \emph{d} = -0.05 \(\pm\) 0.07, 95\% CI {[}-0.18 0.08{]}. See Figure \ref{fig:plot-all-effect} right panel.
+For the other-referential condition, we found that only the difference between positive and negative on RT was significant, all the other conditions were not. The effect size of RT between positive and negative is Cohen's \emph{d} = -0.28 \(\pm\) 0.05, 95\% CI {[}-0.38 -0.17{]}; on \emph{d'} was Cohen's \emph{d} = -0.02 \(\pm\) 0.08, 95\% CI {[}-0.17 0.13{]}. The effect was not observed between positive and neutral condition, RT: Cohen's \emph{d} = -0.12 \(\pm\) 0.10, 95\% CI {[}-0.31 0.06{]}; \emph{d'}: Cohen's \emph{d} = 0.01 \(\pm\) 0.08, 95\% CI {[}-0.16 0.17{]}. And the difference between neutral and bad conditions are not significant, RT: Cohen's \emph{d} = 0.14 \(\pm\) 0.09, 95\% CI {[}-0.03 0.31{]}; \emph{d'}: Cohen's \emph{d} = 0.05 \(\pm\) 0.07, 95\% CI {[}-0.08 0.18{]}. See Figure \ref{fig:plot-all-effect} right panel.
 
 \hypertarget{generalizibility-of-the-valence-effect}{%
 \subsection{Generalizibility of the valence effect}\label{generalizibility-of-the-valence-effect}}
@@ -358,9 +358,9 @@ For the questionnaire part, we are interested in those questionnaires related to
 We used Pearson correlation analysis to quantify the correlation. For those correlation that is significant (\(p < 0.05\)), we further tested the robustness of the correlation using bootstrap.
 
 We focused on the task-questionnaire correlation, the results revealed that the score from three questionnaire are related to behavioral responses data.
-First, the moral self image is positively correlated with the \(d'\) (\(r = 0.24\), , 95\% CI {[}0.065 0.398{]}) and the drift rate (\(r = 0.226\), , 95\% CI {[}0.046 0.385{]}) of the morally good condition. See the left part of Figure \ref{fig:plot-corr-1}.
+First, the moral self image is positively correlated with the \(d'\) (\(r = 0.24\), 95\% CI {[}0.065 0.398{]}) and the drift rate (\(r = 0.226\), 95\% CI {[}0.046 0.385{]}) of the morally good condition. See the left part of Figure \ref{fig:plot-corr-1}.
 
-Second, we found the self esteem score was negative correlated with the \(d'\) of neutral conditions (\(r = -0.151\), , 95\% CI {[}-0.261 -0.039{]}) and the bad conditions (\(r = -0.167\), , 95\% CI {[}-0.314 -0.014{]}). See the right part of Figure \ref{fig:plot-corr-1}.
+Second, we found the self esteem score was negative correlated with the \(d'\) of neutral conditions (\(r = -0.151\), 95\% CI {[}-0.261 -0.039{]}) and the bad conditions (\(r = -0.167\), 95\% CI {[}-0.314 -0.014{]}). See the right part of Figure \ref{fig:plot-corr-1}.
 
 \begin{figure}
 \centering
